<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_manage"
        android:id="@+id/menu_settings"
        android:orderInCategory="400"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_list"
        android:orderInCategory="100"
        android:title="@string/menu_list"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="200"
        android:title="@string/menu_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_newWords"
        android:orderInCategory="300"
        android:title="@string/menu_newWords"
        app:showAsAction="collapseActionView"/>
</menu>